# claude-relay

./: .air.toml  .gitignore  .mcp.json  AUTHENTICATION.md  Cargo.toml  Dockerfile  LIBRARY_SUMMARY.md  LICENSE  Makefile  README.md  README_LIBRARY.md  auth.go  auth_helper.go  auth_integrated.go  auth_interactive.go  clay.yaml  config.go  doc.go  errors.go  go.mod  process.go  process_v2.go  push-to-github.sh  relay.go  setup.go  setup.sh  test.sh  test_simple.sh  test_ws.py  websocket.go  websocket_v2.go
cmd/claude-relay/: main.go
examples/auth-apikey/: main.go
examples/auth-callback/: main.go
examples/auth-preconfig/: main.go
examples/basic/: main.go
examples/docker-deployment/: Dockerfile  main.go
examples/embedded/: main.go
examples/multiple/: main.go
examples/webservice/: main.go
examples/websocket/: chat.html  index.html  main.go
examples/websocket-server/: README.md  client.html  client_with_auth.html  main.go  test_auth_ui.html  websocket.go
src/: auth.rs  config.rs  error.rs  lib.rs  main.rs  process.rs  server.rs  setup.rs
tests/: auth_simulation.rs  basic_test.rs  interactive_test.rs  pty_debug.rs
